--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "## Topics",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -18,8 +18,12 @@
   },
   "homepage": "https://github.com/lorenzosimpson/node-db4-challenge#readme",
   "dependencies": {
+    "express": "^4.17.1",
     "knex": "^0.20.1",
     "knex-cleaner": "^1.3.0",
     "sqlite3": "^4.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.4"
   }
 }
